# armenian-phonetic

./: .gitignore  ArmenianPhonetic.icns  ArmenianPhonetic.keylayout  ArmenianPhonetic.pkg  ArmenianPhoneticKDWin.keylayout  ArmenianPhoneticKDWinWithEnglish.keylayout  ArmenianPhoneticWithEnglish.keylayout  README.md  appdmg.json  background.sketch  icon.sketch  new_file.js  package-lock.json  package.json  pyproject.toml  settings.py
ArmenianPhonetic.bundle/Contents/: Info.plist  version.plist
ArmenianPhonetic.bundle/Contents/Resources/: Armenian - Phonetic.keylayout  Armenian Phonetic (KDWin) With English.icns  Armenian Phonetic (KDWin) With English.keylayout  Armenian Phonetic (KDWin).keylayout  Armenian Phonetic With English.keylayout  Armenian Phonetic.keylayout
ArmenianPhonetic.bundle/Contents/Resources/English.lproj/: InfoPlist.strings
ArmenianPhonetic.bundle/Contents/Resources/hy-Armn_AM.lproj/: InfoPlist.strings
doc/: building.md
resources/: icon.sketch
